## Makefile.am in applications/dummy

bin_PROGRAMS += applications/dummy/fclaw2d_dummy

applications_dummy_fclaw2d_dummy_SOURCES = \
        applications/dummy/fclaw2d_dummy.c \
        applications/dummy/dummy_blackbox.c \
        applications/dummy/dummy_blackbox.h

# TODO: we don't need this, but for testing activating this line should link
# applications_dummy_fclaw2d_dummy_LDADD = $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
